HLDP-334 - Fix for layout issues and IDS download component

--- a/app/assets/stylesheets/_item.scss
+++ b/app/assets/stylesheets/_item.scss
@@ -281,7 +281,7 @@ dl.row {
 
   .permalink {
       clear: both;
-      padding: 10px 0 40px;
+      padding: 20px 0 40px;
   }
 
   .dl-iiif img {
